# uavlink

./: CMakeLists.txt  README.md  setup-ns3-v2x-uavlink.sh
doc/: uavlink.rst
examples/NR/: CMakeLists.txt  nr-sl-ue-mac-scheduler-dynamic-mcs.cc  nr-sl-ue-mac-scheduler-dynamic-mcs.h  uav-base-scheduler_nr.cc  uav-base-scheduler_nr.h  uavlink-dynamic-mcs.cc  uavlink-dynamic-mcs.h  uavlink-dynamic-mcs_py.cc  uavlink-nr-v2x-uav.cc  uavlink_fixed_mcs.py  uavlink_macs.py  uavlink_sinr_mac_EKF.py
helper/: uavlink-helper.cc  uavlink-helper.h
model/: UavLinkSemaphore.h  messages.pb.cc  opengym_interface.cc  opengym_interface.h  uavlink.cc  uavlink.h
nr-sidelink/: nr-phy-mac-common.h  nr-sl-ue-mac-harq.h  nr-sl-ue-mac-scheduler-fixed-mcs.h  nr-spectrum-phy.cc  three-gpp-antenna-model.cc
test/: uavlink-test-suite.cc
